workspace(name = "TimedAction")

################################
# **GIT REPOSITORY**
################################

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_google_googletest",
    commit = "1b18723e874b256c1e39378c6774a90701d70f7a",
    remote = "https://github.com/google/googletest",
    # tag = "release-1.13.0",
)

#local_repository(
#    name = "google_test",
#    path = "third_party/google_test",
#)
